Simplified format of JSON and refined the framework so the API for accessing data maps more logically to the JSON format.

--- a/html/components/sidebar.html
+++ b/html/components/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   Pages:
   <li data-ng-repeat="page in list">
-    <a href="#{{page.url}}">{{page.name}}</a>
+    <a href="{{page.url}}">{{page.name}}</a>
   </li>
 </div>
