--- a/html/components/posts-list.html
+++ b/html/components/posts-list.html
@@ -1,6 +1,6 @@
 <div class="posts">
   Posts:
   <li data-ng-repeat="post in list">
-    <a href="#/post/{{post.url}}">{{post.name}}</a>
+    <a href="{{post.url}}">{{post.title}}</a>
   </li>
 </div>
